Ray Tuner Support: Stopping + Search Space

--- a/Notebooks/Complete/s1-upload-l5kit-data-wandb.ipynb
+++ b/Notebooks/Complete/s1-upload-l5kit-data-wandb.ipynb
@@ -2,7 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#NOTE: DONT USE RELATIVE PATHS FOR THE MODELS PROVIDED BY L5\n",
+    "experiments_directory = Path(Path(os.path.abspath('')).parent.parent, \"Experiments\")\n",
+    "experiments_directory.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "raw_data_directory = Path(experiments_directory, \"raw_data\")\n",
+    "raw_data_directory.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "save_directory = Path(raw_data_directory, \"saved_outputs\")\n",
+    "save_directory.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(save_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -76,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -114,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -138,11 +175,11 @@
      "output_type": "stream",
      "text": [
       "Downloading sample zarr dataset...\n",
-      "sample.tar          100%[===================>]  51.37M  30.6MB/s    in 1.7s    \n",
+      "sample.tar          100%[===================>]  51.37M  24.5MB/s    in 2.1s    \n",
       "Downloading semantic map...\n",
-      "semantic_map.tar    100%[===================>]   2.86M  --.-KB/s    in 0.1s    \n",
+      "semantic_map.tar    100%[===================>]   2.86M  4.97MB/s    in 0.6s    \n",
       "Downloading aerial maps (this can take a while)...\n",
-      "aerial_map.tar      100%[===================>]   2.28G  29.9MB/s    in 84s     \n",
+      "aerial_map.tar      100%[===================>]   2.28G  32.3MB/s    in 71s     \n",
       "Downloading configurations...\n"
      ]
     }
@@ -153,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "executionInfo": {
      "elapsed": 11005,
@@ -175,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -197,58 +234,11 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
-       "            function loadScript(url) {\n",
-       "            return new Promise(function(resolve, reject) {\n",
-       "                let newScript = document.createElement(\"script\");\n",
-       "                newScript.onerror = reject;\n",
-       "                newScript.onload = resolve;\n",
-       "                document.body.appendChild(newScript);\n",
-       "                newScript.src = url;\n",
-       "            });\n",
-       "            }\n",
-       "            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n",
-       "            const iframe = document.createElement('iframe')\n",
-       "            iframe.style.cssText = \"width:0;height:0;border:none\"\n",
-       "            document.body.appendChild(iframe)\n",
-       "            const handshake = new Postmate({\n",
-       "                container: iframe,\n",
-       "                url: 'https://wandb.ai/authorize'\n",
-       "            });\n",
-       "            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n",
-       "            handshake.then(function(child) {\n",
-       "                child.on('authorize', data => {\n",
-       "                    clearTimeout(timeout)\n",
-       "                    resolve(data)\n",
-       "                });\n",
-       "            });\n",
-       "            })\n",
-       "        });\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
-     ]
-    },
-    {
-     "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -294,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -681,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -723,7 +713,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/content/wandb/run-20220818_033712-13z6lrum</code>"
+       "Run data is saved locally in <code>/home/jupyter/l5kit-ray-wandb-demo/Experiments/raw_data/saved_outputs/wandb/run-20220819_060015-a7vo7b5w</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -735,7 +725,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href=\"https://wandb.ai/l5-demo/l5-common/runs/13z6lrum\" target=\"_blank\">upload_data</a></strong> to <a href=\"https://wandb.ai/l5-demo/l5-common\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href=\"https://wandb.ai/l5-demo/l5-common/runs/a7vo7b5w\" target=\"_blank\">upload_data</a></strong> to <a href=\"https://wandb.ai/l5-demo/l5-common\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -748,17 +738,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (./dataset)... Done. 15.5s\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (./dataset)... Done. 2.3s\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (./configurations)... Done. 0.1s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<wandb.sdk.wandb_artifacts.Artifact at 0x7ffa44bd0b10>"
+       "<wandb.sdk.wandb_artifacts.Artifact at 0x7fbfc5fc46d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -825,12 +815,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00aea2806ade4f63b1aff421818c832b",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='2387.018 MB of 2387.018 MB uploaded (0.002 MB deduped)\\r'), FloatProgress(value=1.…"
+       "VBox(children=(Label(value='2387.106 MB of 2387.106 MB uploaded (0.002 MB deduped)\\r'), FloatProgress(value=1.…"
       ]
      },
      "metadata": {},
@@ -839,7 +829,7 @@
     {
      "data": {
       "text/html": [
-       "Synced <strong style=\"color:#cdcd00\">upload_data</strong>: <a href=\"https://wandb.ai/l5-demo/l5-common/runs/13z6lrum\" target=\"_blank\">https://wandb.ai/l5-demo/l5-common/runs/13z6lrum</a><br/>Synced 5 W&B file(s), 0 media file(s), 515 artifact file(s) and 1 other file(s)"
+       "Synced <strong style=\"color:#cdcd00\">upload_data</strong>: <a href=\"https://wandb.ai/l5-demo/l5-common/runs/a7vo7b5w\" target=\"_blank\">https://wandb.ai/l5-demo/l5-common/runs/a7vo7b5w</a><br/>Synced 7 W&B file(s), 0 media file(s), 512 artifact file(s) and 1 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -851,7 +841,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20220818_033712-13z6lrum/logs</code>"
+       "Find logs at: <code>./wandb/run-20220819_060015-a7vo7b5w/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -864,6 +854,13 @@
    "source": [
     "run.finish()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
