Dashboard demo ready notebooks

--- a/Notebooks/Actively Worked On/Level-5-agent_motion_prediction_eval.ipynb
+++ b/Notebooks/Actively Worked On/Level-5-agent_motion_prediction_eval.ipynb
@@ -58,7 +58,8 @@
     "pyyaml\n",
     "wandb\n",
     "ray==2.0.0rc1\n",
-    "\"ray[air]\""
+    "\"ray[air]\"\n",
+    "h5py"
    ]
   },
   {
@@ -72,7 +73,8 @@
     "# !pip install -r requirements.txt\n",
     "!pip install l5kit pyyaml wandb\n",
     "!pip install ray==2.0.0rc1\n",
-    "!pip install \"ray[air]\""
+    "!pip install \"ray[air]\"\n",
+    "!pip install h5py"
    ]
   },
   {
@@ -320,17 +322,6 @@
     "id": "509YuZenJCbj"
    },
    "source": [
-    "def forward(data, model, criterion):\n",
-    "    inputs = data[\"image\"]\n",
-    "    target_availabilities = data[\"target_availabilities\"].unsqueeze(-1)\n",
-    "    targets = data[\"target_positions\"]\n",
-    "    # Forward pass\n",
-    "    outputs = model(inputs).reshape(targets.shape)\n",
-    "    loss = criterion(outputs, targets)\n",
-    "    # not all the output steps are valid, but we can filter them out from the loss using availabilities\n",
-    "    loss = loss * target_availabilities\n",
-    "    loss = loss.mean()\n",
-    "    return loss, outputs### Storing Predictions\n",
     "There is a small catch to be aware of when saving the model predictions. The output of the models are coordinates in `agent` space and we need to convert them into displacements in `world` space.\n",
     "\n",
     "To do so, we first convert them back into the `world` space and we then subtract the centroid coordinates."
@@ -421,15 +412,15 @@
     "        future_coords_offsets_pd.append(np.stack(coords_offset))\n",
     "        timestamps.append(data[\"timestamp\"].numpy().copy())\n",
     "        agent_ids.append(data[\"track_id\"].numpy().copy())\n",
-    "\n",
+    "    \n",
     "    pred_path = Path(dir_to_save, \"eval_preds.csv\")\n",
-    "    pred_df = pd.read_csv(pred_path)\n",
-    "\n",
     "    write_pred_csv(pred_path,\n",
     "       timestamps=np.concatenate(timestamps),\n",
     "       track_ids=np.concatenate(agent_ids),\n",
     "       coords=np.concatenate(future_coords_offsets_pd),\n",
     "    )\n",
+    "    \n",
+    "    pred_df = pd.read_csv(pred_path)\n",
     "    \n",
     "    metrics = compute_metrics_csv(eval_gt_path, pred_path, [neg_multi_log_likelihood, \n",
     "                                                        time_displace, \n",
@@ -502,7 +493,7 @@
     "    gif_path = Path(dir_to_save, f\"prediction_animation.gif\")\n",
     "    frame_one = scene_frames[0]\n",
     "    frame_one.save(gif_path, format=\"GIF\", append_images=scene_frames,\n",
-    "               save_all=True, duration=100, loop=0)\n",
+    "               save_all=True, duration=1000, loop=0)\n",
     "    \n",
     "    return metrics, frame_prediction_details, gif_path, pred_df\n"
    ]
@@ -557,7 +548,7 @@
     "api = wandb.Api()\n",
     "#Grab all run trials from a specific date range?\n",
     "#TODO: figure out best criteria to get runs\n",
-    "runs = api.runs(f'{wandb_entity}/{project_name}-trials', {\n",
+    "model_runs = api.runs(f'{wandb_entity}/{project_name}-trials', {\n",
     "    # \"$and\": [{\n",
     "    # 'created_at': {\n",
     "    #     \"$lt\": 'YYYY-MM-DDT##',\n",
@@ -566,16 +557,16 @@
     "    # }]\n",
     "})\n",
     "run_model_map = {}\n",
-    "for run in runs:\n",
-    "    for art in run.logged_artifacts():\n",
-    "        if \"latest\" in art.aliases:\n",
-    "            run_model_map[run.name] = {\n",
-    "                \"loss\": run.summary[\"loss\"],\n",
-    "                \"avg_loss\": run.summary[\"avg_loss\"],\n",
-    "                \"art\": art,\n",
-    "                \"run_url\": run.url\n",
-    "                \"run_id\": run.id,\n",
-    "                \"run_summary\": run.summary\n",
+    "for model_run in model_runs:\n",
+    "    for model_art in model_run.logged_artifacts():\n",
+    "        if \"latest\" in model_art.aliases:\n",
+    "            run_model_map[model_run.name] = {\n",
+    "                \"loss\": model_run.summary[\"loss\"],\n",
+    "                \"avg_loss\": model_run.summary[\"avg_loss\"],\n",
+    "                \"art\": model_art,\n",
+    "                \"run_url\": model_run.url,\n",
+    "                \"run_id\": model_run.id,\n",
+    "                \"run_summary\": model_run.summary\n",
     "            }"
    ]
   },
@@ -587,7 +578,8 @@
    "outputs": [],
    "source": [
     "from ray.air.checkpoint import Checkpoint\n",
-    "import PIL"
+    "import PIL\n",
+    "import h5py"
    ]
   },
   {
@@ -603,10 +595,12 @@
     "    run_directory = Path(save_directory, run_name)\n",
     "    run_data = {}\n",
     "    run_data[\"run_name\"] = run_name\n",
-    "    #TOOD: add link to run?\n",
-    "    art = run_details[\"art\"]\n",
+    "    model_art = run_details[\"art\"]\n",
+    "    #Hack to link evaluated model trials with eval data\n",
+    "    #This run refers to the run keeping track of this evaluation action\n",
+    "    run.use_artifact(model_art)\n",
     "    run_model_path = Path(run_directory, \"model\")\n",
-    "    model_dir = art.download(run_model_path)\n",
+    "    model_dir = model_art.download(run_model_path)\n",
     "    checkpoint = Checkpoint.from_directory(model_dir)\n",
     "    recovered_model = checkpoint.to_dict()\n",
     "    model = recovered_model['model']\n",
@@ -672,12 +666,14 @@
     "    run_data.update(all_eval_metrics)\n",
     "    \n",
     "    run_data.update({f\"semantic_predictions\" : semantic_predictions, f\"satellite_predictions\" : satellite_predictions})\n",
-    "    run_data.update({f\"semantic_animation\" : wandb.Video(str(semantic_gif), fps=1), f\"satellite_animation\" : wandb.Video(str(satellite_gif), fps=1)})\n",
+    "    run_data.update({f\"semantic_animation\" : wandb.Video(str(semantic_gif)), f\"satellite_animation\" : wandb.Video(str(satellite_gif))})\n",
     "    del run_data['art']\n",
+    "    del run_data[\"run_summary\"]\n",
     "    \n",
-    "    art.metadata.update(all_eval_metrics)\n",
-    "    art.save()\n",
-    "    run.summary.update(all_eval_metrics)\n",
+    "    #BUG: Report to wandb\n",
+    "    # model_art.metadata.update(all_eval_metrics)\n",
+    "    # model_art.save()\n",
+    "    run_details[\"run_summary\"].update(all_eval_metrics)\n",
     "    eval_run_table_data.append(run_data)\n",
     "    \n",
     "    run.log({f\"{run_name}_predicted_semantic_coords\": wandb.Table(dataframe=semantic_pred_df),\n",
