--- a/Notebooks/Actively Worked On/Level-5-agent_motion_prediction_train.ipynb
+++ b/Notebooks/Actively Worked On/Level-5-agent_motion_prediction_train.ipynb
@@ -497,6 +497,8 @@
     "            session.report(\n",
     "                metrics=metrics\n",
     "            )\n",
+    "        \n",
+    "        #TODO: Wandb alert upon end of trial\n",
     "    \n",
     "    # run.finish()"
    ]
@@ -587,7 +589,7 @@
     "#NOTE: To figure out if scaling config intuiutin is correct: num_actors divide resources between each actor and within the train func each actor can the utilize the shared resources\n",
     "trainer = TorchTrainer(\n",
     "    train_loop_per_worker=train_prediction_model,\n",
-    "    scaling_config=ScalingConfig(num_workers=num_actors, use_gpu=torch.cuda.is_available()), #TODO: Add logic to check if GPU is available here\n",
+    "    scaling_config=ScalingConfig(num_workers=num_actors, use_gpu=USE_GPU), #TODO: Add logic to check if GPU is available here\n",
     ")"
    ]
   },
@@ -846,6 +848,13 @@
     "    run.log({\"analysis_table\": analysis_table})\n",
     "    run.finish()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
