--- a/Notebooks/Actively Worked On/Level-5-agent_motion_prediction_train.ipynb
+++ b/Notebooks/Actively Worked On/Level-5-agent_motion_prediction_train.ipynb
@@ -498,7 +498,11 @@
     "                metrics=metrics\n",
     "            )\n",
     "        \n",
-    "        #TODO: Wandb alert upon end of trial\n",
+    "    wandb.alert(\n",
+    "        title=f'{trial_readable_name}_complete',\n",
+    "        text=f'Final loss was {loss} and final avg_loss was {avg_loss}'\n",
+    "    )\n",
+    "\n",
     "    \n",
     "    # run.finish()"
    ]
@@ -609,9 +613,9 @@
     "# tuner_train_config[\"batch_size\"] = 12\n",
     "\n",
     "##tunable\n",
-    "tuner_train_config[\"max_num_steps\"] = tune.quniform(50, 1000, 50)\n",
+    "tuner_train_config[\"max_num_steps\"] = tune.quniform(1000, 5000, 250)\n",
     "# tuner_train_config[\"max_num_steps\"] = tune.quniform(5, 50, 5)\n",
-    "tuner_train_config[\"lr\"] = tune.loguniform(1e-3, 1e-2)\n",
+    "tuner_train_config[\"lr\"] = tune.loguniform(1e-4, 1e-2)\n",
     "tuner_train_config[\"batch_size\"] = tune.quniform(6, 24, 6)\n",
     "cfg[\"raster_params\"][\"map_type\"] = tune.choice([\"py_semantic\", \"py_satellite\"])\n",
     "\n",
@@ -671,7 +675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_search_attempts = 10"
+    "n_search_attempts = 25"
    ]
   },
   {
